# Solving-equations-with-one-variable

./: CMakeLists.txt  EquationScalar.docx  README.md  Solving equations with one variable.sln
Solving equations with one variable/: CMakeLists.txt  EquationScalar.h  IInputDevice.cpp  IInputDevice.h  Solving equations with one variable.vcxproj  Solving equations with one variable.vcxproj.filters  Timer.h  input.txt  main.cpp  output.txt
